@@ -1,20 +1,19 @@
 package dev.fileeditor.votl.commands.other;
 
-import java.util.Collections;
+import java.util.List;
 
-import net.dv8tion.jda.api.EmbedBuilder;
+import dev.fileeditor.votl.App;
+import dev.fileeditor.votl.base.command.SlashCommandEvent;
+import dev.fileeditor.votl.commands.CommandBase;
+import dev.fileeditor.votl.objects.constants.CmdCategory;
+import dev.fileeditor.votl.objects.constants.Constants;
+import dev.fileeditor.votl.objects.constants.Links;
+
 import net.dv8tion.jda.api.JDAInfo;
+import net.dv8tion.jda.api.entities.MessageEmbed;
 import net.dv8tion.jda.api.interactions.DiscordLocale;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.OptionData;
-
-import com.jagrosh.jdautilities.commons.JDAUtilitiesInfo;
-
-import dev.fileeditor.votl.App;
-import dev.fileeditor.votl.commands.CommandBase;
-import dev.fileeditor.votl.objects.command.SlashCommandEvent;
-import dev.fileeditor.votl.objects.constants.CmdCategory;
-import dev.fileeditor.votl.objects.constants.Links;
 
 public class AboutCmd extends CommandBase {
 
@@ -22,8 +21,8 @@ public class AboutCmd extends CommandBase {
 		super(bot);
 		this.name = "about";
 		this.path = "bot.other.about";
-		this.options = Collections.singletonList(
-			new OptionData(OptionType.BOOLEAN, "show", lu.getText("misc.show_description"))
+		this.options = List.of(
+			new OptionData(OptionType.BOOLEAN, "show", lu.getText(path+".show.help"))
 		);
 		this.category = CmdCategory.OTHER;
 		this.guildOnly = false;
@@ -32,19 +31,15 @@ public class AboutCmd extends CommandBase {
 	@Override
 	protected void execute(SlashCommandEvent event) {
 		DiscordLocale userLocale = event.getUserLocale();
-		EmbedBuilder builder = null;
-
-		if (event.isFromGuild()) {
-			builder = bot.getEmbedUtil().getEmbed(event);
-		} else {
-			builder = bot.getEmbedUtil().getEmbed();
-		}
-
-		builder.setAuthor(event.getJDA().getSelfUser().getName(), event.getJDA().getSelfUser().getEffectiveAvatarUrl())
+		MessageEmbed embed = bot.getEmbedUtil().getEmbed()
+			.setAuthor(event.getJDA().getSelfUser().getName(), event.getJDA().getSelfUser().getEffectiveAvatarUrl())
 			.setThumbnail(event.getJDA().getSelfUser().getEffectiveAvatarUrl())
 			.addField(
-				lu.getLocalized(userLocale, "bot.other.about.embed.about_title"),
-				lu.getLocalized(userLocale, "bot.other.about.embed.about_value"),
+				lu.getLocalized(userLocale, "bot.other.about.embed.about_title")
+					.replace("{name}", "VOTL bot"),
+				lu.getLocalized(userLocale, "bot.other.about.embed.about_value")
+					.replace("{developer_name}", Constants.DEVELOPER_TAG)
+					.replace("{developer_id}", Constants.DEVELOPER_ID),
 				false
 			)
 			.addField(
@@ -56,11 +51,10 @@ public class AboutCmd extends CommandBase {
 				lu.getLocalized(userLocale, "bot.other.about.embed.bot_info.title"),
 				String.join(
 					"\n",
-					lu.getLocalized(userLocale, "bot.other.about.embed.bot_info.bot_version"),
+					lu.getLocalized(userLocale, "bot.other.about.embed.bot_info.bot_version").replace("{bot_version}", bot.VERSION),
 					lu.getLocalized(userLocale, "bot.other.about.embed.bot_info.library")
-						.replace("{jda_version}", JDAInfo.VERSION_MAJOR+"."+JDAInfo.VERSION_MINOR+"."+JDAInfo.VERSION_REVISION+"-"+JDAInfo.VERSION_CLASSIFIER)
+						.replace("{jda_version}", JDAInfo.VERSION)
 						.replace("{jda_github}", JDAInfo.GITHUB)
-						.replace("{chewtils_version}", JDAUtilitiesInfo.VERSION_MAJOR+"."+JDAUtilitiesInfo.VERSION_MINOR)
 						.replace("{chewtils_github}", Links.CHEWTILS_GITHUB)
 				),
 				false
@@ -69,25 +63,21 @@ public class AboutCmd extends CommandBase {
 				lu.getLocalized(userLocale, "bot.other.about.embed.links.title"),
 				String.join(
 					"\n",
-					lu.getLocalized(userLocale, "bot.other.about.embed.links.discord"),
+					lu.getLocalized(userLocale, "bot.other.about.embed.links.discord").replace("{guild_invite}", Links.DISCORD),
 					lu.getLocalized(userLocale, "bot.other.about.embed.links.github").replace("{github_url}", Links.GITHUB),
-					lu.getLocalized(userLocale, "bot.other.about.embed.links.privacy").replace("{privacy}", Links.PRIVACY),
-					lu.getLocalized(userLocale, "bot.other.about.embed.links.terms").replace("{terms}", Links.TERMS)
+					lu.getLocalized(userLocale, "bot.other.about.embed.links.terms").replace("{terms_url}", Links.TERMS),
+					lu.getLocalized(userLocale, "bot.other.about.embed.links.privacy").replace("{privacy_url}", Links.PRIVACY)
 				),
 				true
 			)
 			.addField(
-				lu.getLocalized(userLocale, "bot.other.about.embed.links.unionteams_title"),
-				String.join(
-					"\n",
-					lu.getLocalized(userLocale, "bot.other.about.embed.links.unionteams_website").replace("{unionteams}", Links.UNIONTEAMS),
-					lu.getLocalized(userLocale, "bot.other.about.embed.links.rotr").replace("{rotr_invite}", Links.ROTR_INVITE),
-					lu.getLocalized(userLocale, "bot.other.about.embed.links.ww2").replace("{ww2_invite}", Links.WW2_INVITE)
-				),
-				true
-			);
+				lu.getLocalized(userLocale, "bot.other.about.embed.links.translate"),
+				"[Crowdin.com](%s)".formatted(Links.CROWDIN),
+				false
+			)
+			.build();
 		
-		createReplyEmbed(event, event.isFromGuild() ? !event.optBoolean("show", false) : false, builder.build());
+		createReplyEmbed(event, event.isFromGuild() ? !event.optBoolean("show", false) : false, embed);
 	}
 
 }
