@@ -1,7 +1,14 @@
 package dev.fileeditor.votl.commands.owner;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
+
+import dev.fileeditor.votl.App;
+import dev.fileeditor.votl.base.command.SlashCommandEvent;
+import dev.fileeditor.votl.commands.CommandBase;
+import dev.fileeditor.votl.objects.constants.CmdCategory;
+import dev.fileeditor.votl.objects.constants.Constants;
+import dev.fileeditor.votl.utils.message.MessageUtil;
 
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.entities.MessageEmbed;
@@ -11,11 +18,6 @@ import net.dv8tion.jda.api.interactions.commands.build.OptionData;
 
 import org.codehaus.groovy.runtime.powerassert.PowerAssertionError;
 
-import dev.fileeditor.votl.App;
-import dev.fileeditor.votl.commands.CommandBase;
-import dev.fileeditor.votl.objects.command.SlashCommandEvent;
-import dev.fileeditor.votl.objects.constants.CmdCategory;
-import dev.fileeditor.votl.objects.constants.Constants;
 import groovy.lang.Binding;
 import groovy.lang.GroovyShell;
 
@@ -25,12 +27,8 @@ public class EvalCmd extends CommandBase {
 		super(bot);
 		this.name = "eval";
 		this.path = "bot.owner.eval";
-		this.options = Collections.singletonList(
-			new OptionData(OptionType.STRING, "code", lu.getText(path+".code_description"), true) 
-			// Я блять ненавижу эту штуку
-			// Нужно переделовать через modals, но для этого нужно вначале получить комманду от пользователя
-			// позже выслать форму для заполения и только потом обработать ее
-			// ............пиздец
+		this.options = List.of(
+			new OptionData(OptionType.STRING, "code", lu.getText(path+".code.help"), true) 
 		);
 		this.category = CmdCategory.OWNER;
 		this.ownerCommand = true;
@@ -49,20 +47,19 @@ public class EvalCmd extends CommandBase {
 		}
 		args = args.trim();
 		if (args.startsWith("```") && args.endsWith("```")) {
-			if (args.startsWith("```java")) {
+			args = args.substring(3, args.length() - 3);
+			if (args.startsWith("java")) {
 				args = args.substring(4);
 			}
-			args = args.substring(3, args.length() - 3);
 		}
 
 		Map<String, Object> variables = Map.of(
 			"bot", bot,
 			"event", event,
-			"hook", event.getHook(),
 			"jda", event.getJDA(),
-			"guild", (event.isFromGuild() ? event.getGuild() : null),
-			"channel", event.getChannel(),
-			"client", event.getClient()
+			"guild", (event.isFromGuild() ? event.getGuild() : "null"),
+			"client", event.getClient(),
+			"helper", (bot.getHelper() != null ? bot.getHelper() : "null")
 		);
 
 		Binding binding = new Binding(variables);
@@ -71,15 +68,14 @@ public class EvalCmd extends CommandBase {
 		long startTime = System.currentTimeMillis();
 
 		try {
-			Object resp = shell.evaluate(args);
-			String respString = String.valueOf(resp);
+			String reply = String.valueOf(shell.evaluate(args));
 
-			editHookEmbed(event, formatEvalEmbed(userLocale, args, respString,
+			editHookEmbed(event, formatEvalEmbed(userLocale, args, reply,
 				lu.getLocalized(userLocale, "bot.owner.eval.time")
 					.replace("{time}", String.valueOf(System.currentTimeMillis() - startTime))
 	 			, true));
 		} catch (PowerAssertionError | Exception ex) {
-			editHookEmbed(event,formatEvalEmbed(userLocale, args, ex.getMessage(),
+			editHookEmbed(event, formatEvalEmbed(userLocale, args, ex.getMessage(),
 				lu.getLocalized(userLocale, "bot.owner.eval.time")
 					.replace("{time}", String.valueOf(System.currentTimeMillis() - startTime))
 				, false));
@@ -89,18 +85,12 @@ public class EvalCmd extends CommandBase {
 	private MessageEmbed formatEvalEmbed(DiscordLocale locale, String input, String output, String footer, boolean success) {		
 		EmbedBuilder embed = bot.getEmbedUtil().getEmbed()
 			.setColor(success ? Constants.COLOR_SUCCESS : Constants.COLOR_FAILURE)
-			.addField(lu.getLocalized(locale, "bot.owner.eval.input"), String.format(
-				"```java\n"+
-					"%s\n"+
-					"```",
-				input
-				), false)
-			.addField(lu.getLocalized(locale, "bot.owner.eval.output"), String.format(
-				"```java\n"+
-					"%s\n"+
-					"```",
-				output
-				), false)
+			.addField(lu.getLocalized(locale, "bot.owner.eval.input"),
+				"```groovy\n"+MessageUtil.limitString(input, 1000)+"\n```",
+				false)
+			.addField(lu.getLocalized(locale, "bot.owner.eval.output"),
+				"```groovy\n"+MessageUtil.limitString(output, 1000)+"\n```",
+				false)
 			.setFooter(footer, null);
 
 		return embed.build();
